# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Used only for the shared texture mojom bindings

import("//mojo/public/tools/bindings/mojom.gni")
import("//ui/ozone/ozone.gni")

mojom("osr") {
  sources = [
    "external_renderer_updater.mojom"
  ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//ui/gfx/geometry/mojom",
    "//ui/gfx/mojom"
  ]
}